:sparkles: [#4] add fields to serializer
