# src/openplan/plannen/api/serializers/plan.py
@@ -6,6 +6,7 @@ from vng_api_common.utils import get_help_text
 from openplan.plannen.models.plan import Plan
 from openplan.plannen.models.plantype import PlanType
 from openplan.utils.fields import UUIDRelatedField
+from openplan.utils.serializers import URIModelSerializer
 
 from .plantype import PlanTypeSerializer
 
@@ -21,7 +22,7 @@ class NestedPlanSerializer(serializers.ModelSerializer):
         }
 
 
-class PlanSerializer(serializers.ModelSerializer):
+class PlanSerializer(URIModelSerializer, serializers.ModelSerializer):
     plantype = PlanTypeSerializer(
         required=False,
         read_only=True,
@@ -36,7 +37,19 @@ class PlanSerializer(serializers.ModelSerializer):
 
     class Meta:
         model = Plan
-        fields = ["uuid", "plantype", "plantype_uuid"]
+        fields = [
+            "uri",
+            "uuid",
+            "plantype",
+            "plantype_uuid",
+            "zaak",
+            "domeinregister",
+            "medewerker",
+        ]
         extra_kwargs = {
             "uuid": {"read_only": True},
+            "uri": {
+                "lookup_field": "uuid",
+                "help_text": _("De Uniform Resource Name van de externe taak."),
+            },
         }
